# xai-crewai

./: README.md  crewai_components.py  pyproject.toml  requirements.txt
examples/: CrewAIBasicAgent.xircuits
